<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roulette"
    tools:context=".LuckyNumberActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="558dp"
        android:background="@drawable/frame_text"
        android:fontFamily="@font/gilroy"
        android:padding="7dp"
        android:textAllCaps="true"
        android:text="@string/lucky_number"
        android:textColor="@color/yellow"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="460dp"

        android:fontFamily="@font/gilroy"
        android:text="@string/option_1"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/option_2"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="552dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/your_lucky_number"
        android:textColor="@color/yellow"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/_0"
        android:textColor="@color/aqua"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="62dp"
        android:layout_height="42dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/baseline_share_24"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/gilroy"
        android:textColor="#FFEB3B"
        android:textColorHighlight="#CDDC39"
        android:textColorHint="#FFEB3B"
        android:textColorLink="#CFBE29"
        app:iconTint="#DA2222"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rippleColor="#EC7676"
        app:strokeColor="#ED4343" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/transparent_bg_bordered"
        android:fontFamily="@font/gilroy"
        android:text="@string/ok"
        android:textColor="#4cc9f0"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="@+id/checkBox" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="194dp"
        android:layout_height="108dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="460dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/gilroy"
            android:text="@string/normal_mode"
            android:textColor="@color/green"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy"
            android:text="@string/cheat_mode"
            android:textColor="@color/green"
            android:textSize="25sp" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="106dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="239dp"
        android:layout_marginBottom="237dp"
        android:background="@drawable/frame_text2"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>